--- a/PingTool.WinUI3/Views/ShellPage.xaml
+++ b/PingTool.WinUI3/Views/ShellPage.xaml
@@ -3,7 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:helpers="using:PingTool.Helpers"
-    xmlns:views="using:PingTool.Views">
+    xmlns:views="using:PingTool.Views"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
         <NavigationView
@@ -20,6 +21,11 @@
                 <NavigationViewItem Content="Ping" helpers:NavHelper.NavigateTo="views:MainPage">
                     <NavigationViewItem.Icon>
                         <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xE968;"/>
+                    </NavigationViewItem.Icon>
+                </NavigationViewItem>
+                <NavigationViewItem Content="Multi-Ping" helpers:NavHelper.NavigateTo="views:MultiPingPage">
+                    <NavigationViewItem.Icon>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xF0E2;"/>
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
                 <NavigationViewItem Content="Traceroute" helpers:NavHelper.NavigateTo="views:TraceroutePage">
